fixed note text wrapped

--- a/resources/sass/ProjectDetail/list.scss
+++ b/resources/sass/ProjectDetail/list.scss
@@ -44,3 +44,7 @@
     width: 3rem;
     height: 3rem;
 }
+
+textarea {
+    white-space: pre-wrap;
+}
